--- a/public/admin/css/style1.css
+++ b/public/admin/css/style1.css
@@ -3624,7 +3624,7 @@ body::-webkit-scrollbar {
   margin: 20px 30px 30px;
   z-index: 22;
   border-radius: 10px;
-  padding: 40px 30px;
+  /*padding: 40px 30px;*/
 }
 @media (max-width: 991px) {
   .main_content .main_content_iner {
